; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_dirctrl.c_get_ea_len.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_dirctrl.c_get_ea_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64 }

@EA_EA = common dso_local global i32 0, align 4
@EA_EA_HASH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"IoCheckEaBufferValidity returned %08x (error at offset %u)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32)* @get_ea_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_ea_len(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_3__*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* @EA_EA, align 4
  %20 = load i32, i32* @EA_EA_HASH, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @get_xattr(i32* %16, i32* %17, i32 %18, i32 %19, i32 %20, i32** %10, i32* %11, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %72

24:                                               ; preds = %4
  %25 = load i32*, i32** %10, align 8
  %26 = bitcast i32* %25 to %struct.TYPE_3__*
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @IoCheckEaBufferValidity(%struct.TYPE_3__* %26, i32 %27, i32* %12)
  store i32 %28, i32* %13, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @NT_SUCCESS(i32 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %38, label %32

32:                                               ; preds = %24
  %33 = load i32, i32* %13, align 4
  %34 = load i32, i32* %12, align 4
  %35 = call i32 @WARN(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 %33, i32 %34)
  %36 = load i32*, i32** %10, align 8
  %37 = call i32 @ExFreePool(i32* %36)
  store i32 0, i32* %5, align 4
  br label %73

38:                                               ; preds = %24
  store i32 4, i32* %15, align 4
  %39 = load i32*, i32** %10, align 8
  %40 = bitcast i32* %39 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %40, %struct.TYPE_3__** %14, align 8
  br label %41

41:                                               ; preds = %67, %38
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 2
  %44 = load i64, i64* %43, align 8
  %45 = add nsw i64 5, %44
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = add nsw i64 %45, %48
  %50 = load i32, i32* %15, align 4
  %51 = sext i32 %50 to i64
  %52 = add nsw i64 %51, %49
  %53 = trunc i64 %52 to i32
  store i32 %53, i32* %15, align 4
  %54 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %55 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = icmp eq i64 %56, 0
  br i1 %57, label %58, label %59

58:                                               ; preds = %41
  br label %68

59:                                               ; preds = %41
  %60 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %61 = bitcast %struct.TYPE_3__* %60 to i32*
  %62 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %63 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = getelementptr inbounds i32, i32* %61, i64 %64
  %66 = bitcast i32* %65 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %66, %struct.TYPE_3__** %14, align 8
  br label %67

67:                                               ; preds = %59
  br i1 true, label %41, label %68

68:                                               ; preds = %67, %58
  %69 = load i32*, i32** %10, align 8
  %70 = call i32 @ExFreePool(i32* %69)
  %71 = load i32, i32* %15, align 4
  store i32 %71, i32* %5, align 4
  br label %73

72:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %73

73:                                               ; preds = %72, %68, %32
  %74 = load i32, i32* %5, align 4
  ret i32 %74
}

declare dso_local i64 @get_xattr(i32*, i32*, i32, i32, i32, i32**, i32*, i32) #1

declare dso_local i32 @IoCheckEaBufferValidity(%struct.TYPE_3__*, i32, i32*) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @WARN(i8*, i32, i32) #1

declare dso_local i32 @ExFreePool(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
